@@ -12,15 +12,18 @@
  */
 package org.openhab.binding.enphase.internal.discovery;
 
-import static org.openhab.binding.enphase.internal.EnphaseBindingConstants.*;
+import static org.openhab.binding.enphase.internal.EnphaseBindingConstants.CONFIG_SERIAL_NUMBER;
+import static org.openhab.binding.enphase.internal.EnphaseBindingConstants.THING_TYPE_ENPHASE_INVERTER;
+import static org.openhab.binding.enphase.internal.EnphaseBindingConstants.THING_TYPE_ENPHASE_RELAY;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.binding.enphase.internal.EnphaseBindingConstants;
 import org.openhab.binding.enphase.internal.EnphaseBindingConstants.EnphaseDeviceType;
 import org.openhab.binding.enphase.internal.dto.InventoryJsonDTO.DeviceDTO;
 import org.openhab.binding.enphase.internal.dto.InverterDTO;
@@ -52,13 +55,13 @@ public class EnphaseDevicesDiscoveryService extends AbstractDiscoveryService
     private @Nullable EnvoyBridgeHandler envoyHandler;
 
     public EnphaseDevicesDiscoveryService() {
-        super(Collections.singleton(THING_TYPE_ENPHASE_INVERTER), TIMEOUT_SECONDS, false);
+        super(Set.of(THING_TYPE_ENPHASE_INVERTER), TIMEOUT_SECONDS, false);
     }
 
     @Override
     public void setThingHandler(final @Nullable ThingHandler handler) {
-        if (handler instanceof EnvoyBridgeHandler) {
-            envoyHandler = (EnvoyBridgeHandler) handler;
+        if (handler instanceof EnvoyBridgeHandler bridgeHandler) {
+            envoyHandler = bridgeHandler;
         }
     }
 
@@ -124,7 +127,7 @@ public class EnphaseDevicesDiscoveryService extends AbstractDiscoveryService
 
     private void discover(final ThingUID bridgeID, final String serialNumber, final ThingTypeUID typeUID,
             final String label) {
-        final String shortSerialNumber = defaultPassword(serialNumber);
+        final String shortSerialNumber = EnphaseBindingConstants.defaultPassword(serialNumber);
         final ThingUID thingUID = new ThingUID(typeUID, bridgeID, shortSerialNumber);
         final Map<String, Object> properties = new HashMap<>(1);
 
